--- a/app/views/tools/_header.erb
+++ b/app/views/tools/_header.erb
@@ -12,7 +12,7 @@
   
     <div class="content">
       <ul class="categories">
-        <%= raw tool_categories(@tool) %>
+        <%= raw tool_categories(@tool, params[:format]) %>
       </ul>
     </div>
   </div>
