--- a/app/stylesheets/layout.scss
+++ b/app/stylesheets/layout.scss
@@ -41,6 +41,7 @@ body.popup #content { width:550px; }
 .main section { padding:.4em; }
 
 /* Right sidebar */
+body.popup sidebar { display:none; }
 sidebar { width:260px; float:right;}
 sidebar aside { margin-bottom:2em; padding: 15px; }
 sidebar aside h3 { margin: 0 0 6px 0; padding: 0 0 4px 0; font-size: 1.6em; font-weight: bold; color:#365B81; border-bottom: 2px solid #ecebe1; }
@@ -78,6 +79,7 @@ footer section.sidebar_nav { }
 footer section.main-footer { width:700px; }
 footer section.sidebar { width:260px; float:right; }
 footer section h3 { color:#E2DDDC; font-size:10px; text-transform:uppercase; }
+footer section.main-footer p { color:#bbb; }
 footer section ul li, footer section ul { }
 
 
