--- a/app/views/categories/show.erb
+++ b/app/views/categories/show.erb
@@ -7,8 +7,8 @@
       <div id="sorting">
         <p>Sorting by <%= sorting_name(params[:sort]) %> <a href="#" class="change_sorting"></a></p>
         <ul class="options" style="display:none;">
-          <li><a href="<%= category_path(@category, :sort => :sites_desc) %>">Sort by Sites Using</a></li>
-          <li><a href="<%= category_path(@category, :sort => :toolname_asc) %>">Sort by Tool Name</a></li>
+          <li><a href="<%= category_path(@category, :sort => :sites_desc, :format => params[:format]) %>">Sort by Sites Using</a></li>
+          <li><a href="<%= category_path(@category, :sort => :toolname_asc, :format => params[:format]) %>">Sort by Tool Name</a></li>
         </ul>
       </div>
       <div class="group clear">
