--- a/app/views/layouts/application.popup.erb
+++ b/app/views/layouts/application.popup.erb
@@ -6,7 +6,7 @@
   <%= raw stylesheet_link_merged :all %>
   <%= csrf_meta_tag %>
 </head>
-<body class="popup">
+<body class="popup <%= yield(:body_classes) %> <%= [params[:controller], params[:action]].join("-") %>">
 <div id="main">
   <div class="container group">
     <%- flash.each do |key, msg| -%>
@@ -35,5 +35,4 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
-<% end %></body>
-</html>
+<% end %></body></html>
