--- a/app/views/tool_sites/_using.erb
+++ b/app/views/tool_sites/_using.erb
@@ -1,5 +1,5 @@
 <li class="edit-in-place group ind using" id="using_<%= using.id %>" data-id="<%= using.id %>">
-  <h4><%= link_to using.site.title, using.site %></h4>
+  <h4><%= link_to using.site.title, site_path(using.site, :format => params[:format]) %></h4>
   <% if current_user.claimed_tool?(@tool) || using.user_id == current_user.id || current_user.admin? %>
     <ul class="actions">
       <li><%= link_to "edit", "#", :class => "edit-in-place-edit" %></li>
