--- a/app/views/usings/_using_tool.erb
+++ b/app/views/usings/_using_tool.erb
@@ -2,6 +2,7 @@
   <div class="title">
     <h4><a href="<%= tool_path(using_tool.tool, :format => params[:format]) %>"><% if using_tool.tool.has_favicon? %><img src="<%= using_tool.tool.full_favicon_url %>"   class="favicon" /><% end %><%= using_tool.tool.name%></a></h4>
     <ul class="categories">
+      <li class="popularity"><%= pluralize(using_tool.tool.sites_count, "site") %></li>
       <%= raw tool_categories(using_tool.tool, params[:format]) %>
       <li><%= link_to "comments", site_tool_path(using_tool.site, using_tool.tool, :format => params[:format]), :class => "comments" %></li>
     </ul>
