--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -315,8 +315,8 @@ section.site ul.tools li {border-bottom: 1px solid #c3c0bd; padding-top: 1em}
  .sites .tools li a {background-color: #FFA500; color: #000}
 .sites .tools li a:hover {background-color: #ccA500; color: #000}
  ul.count {color: #fff; width: 120px}
-ul.count li.alexa {background-color: blue}
-ul.count li.pagerank {background-color: green}
+ul.count li.alexa, ul.sort-alexa li.ind li.alexa {background-color: blue; color: #eee}
+ul.count li.pagerank, ul.sort-pagerank li.ind li.pagerank {background-color: green; color: #fff}
 ul.count li {margin: 0; position: relative}
 ul.count li span, ul.count li a {display: block; padding: 7px; z-index: 2; font-size: 1.1em}
 ul.count li em {float: right; font-style: normal; font-weight: bold; padding-left: 12px}
@@ -326,16 +326,20 @@ ul.usings li.ind .title h4 {float: left; font-size: 1.6em; margin: 0; padding: .
 ul.usings li.ind h4 span.url {display: none; font-size: .8em; color: #888}
 ul.usings li.ind:hover h4 span.url {display: inline; margin-left: 1em}
 ul.usings li.ind h4 img.favicon {margin: 0 .5em 0 0}
-ul.usings li.ind a.comments {float: right; display: none}
 ul.usings li.ind:hover a.comments {display: block}
-ul.usings li.ind ul.tools, ul.usings li.ind ul.categories {min-height: 0; margin: 0; max-width: 400px; float: right; position: relative}
+ul.usings li.ind ul.tools, ul.usings li.ind ul.categories {min-height: 0; margin: 0; max-width: 400px; float: right; position: relative; margin-top: 2px}
 ul.usings li.ind ul.tools li, ul.usings li.ind ul.categories li {float: right}
-ul.usings li.ind ul.tools li a, ul.usings li.ind ul.categories li a {margin: 0 0 0 .4em}
+ul.usings li.ind ul.tools li a, ul.usings li.ind ul.categories li a {display: block; font-size: 1.1em; margin-right: 0.2em; padding: 0.3em}
 ul.usings li.ind ul.tools li a.comments, ul.usings li.ind ul.categories li a.comments {background-color: #ff0}
 ul.usings li.ind ul.tools li a.comments:hover, ul.usings li.ind ul.categories li a.comments:hover {background-color: #dddd11}
 ul.usings li.ind p {padding-top: .4em}
 ul.usings li.ind:hover p a.manage_site_tools {display: block; float: right}
 ul.usings li.ind p a.manage_site_tools {display: none}
+ul.usings li.pagerank, ul.usings li.alexa, ul.usings li.popularity {display: none; font-size: 1.2em; margin-left: .4em; padding: .3em}
+ul.usings li.ind ul.categories li a.comments, ul.usings li.ind ul.tools li a.comments {float: right; display: none}
+ul.usings li.ind:hover ul.categories li a.comments, ul.usings li.ind:hover ul.tools li a.comments {display: block}
+ul.sort-alexa li.ind li.alexa, ul.sort-pagerank li.ind li.pagerank {display: inline}
+ul.sort-sites li.ind li.popularity {display: inline; background-color: #bbb; font-size: 1.1em}
 ul.sites.single li.ind:last-child, ul.usings.single li.ind:last-child {border-top: none; border-bottom: 1px solid #ccc}
 ul.usings ul.bookmarks {clear: both}
 ul.usings ul.bookmarks li {border-bottom: 1px solid #e7e7e7; padding: 4px 0}
