--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -50,6 +50,7 @@ ul.tabs a:hover { background-color: #fff;	}
 div.disqus_wrapper { padding:1em; font-size:1.4em; }
 
 
+sidebar aside.search input[type='text'] { width:160px; }
 
 body.sites-show li.sites-show a:link, body.sites-show li.sites-show a:visited,
 body.site_tools-index li.site_tools-index a:link, body.site_tools-index li.site_tools-index a:visited,
@@ -64,13 +65,8 @@ body.tool_sites-manage li.tool_sites-manage a:link, body.tool_sites-manage li.to
 body.sites-edit li.sites-edit a:link, body.sites-edit li.sites-edit a:visited,
 body.bookmarks-show li.bookmarks-show a:link, body.bookmarks-show li.bookmarks-show a:visited,
 body.bookmarks-edit li.bookmarks-edit a:link, body.bookmarks-edit li.bookmarks-edit a:visited,
-
 body.bookmarks-sites li.bookmarks-sites a:link, body.bookmarks-sites li.bookmarks-sites a:visited,
 body.bookmarks-tools li.bookmarks-tools a:link, body.bookmarks-tools li.bookmarks-tools a:visited,
 body.tools-bookmarks li.tools-bookmarks a:link, body.tools-bookmarks li.tools-bookmarks a:visited,
 body.sites-bookmarks li.sites-bookmarks a:link, body.sites-bookmarks li.sites-bookmarks a:visited
-
-
-
-
 { border-bottom: 1px solid #fff; background: #fff; color: #000; }
