--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -24,14 +24,11 @@
 </section>
 
 <sidebar>
-  <aside>
-    <h3>Search for a Tool</h3>
-    <div>
-      <form action="<%= tools_path %>" method="get">
-        <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a tool" />
-        <input type="submit" value="Search" />
-      </form>
-    </div>
+  <aside class="search">
+    <form action="<%= tools_path %>" method="get">
+      <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a tool..." />
+      <input type="submit" value="Search" />
+    </form>
   </aside>
 
   <% cache("categories_sidebar", :expires_in => 30.minutes) do %>
