--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,11 @@
 <head>
   <%- title = yield(:title) %>
   <title><%=  title || "Line Of Thought - Tracking what powers the web" %><%= " - Line Of Thought" if title && !title.blank? %></title>
-  <%= raw stylesheet_link_merged :all %>
+  <meta content="<%= page_description %>" name="description" />
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type" /> 
+  <meta content="en-us" http-equiv="Content-Language" />
   <%= csrf_meta_tag %>
+  <%= raw stylesheet_link_merged :all %>
 </head>
 <body class="<%= yield(:body_classes) %> <%= [params[:controller], params[:action]].join("-") %>">
 <header class="group">
