--- a/app/views/sites/_form.erb
+++ b/app/views/sites/_form.erb
@@ -1,6 +1,7 @@
 <%= semantic_form_for @site, :format => params[:format] do |f| %>
   <%= f.inputs do %>
-    <%= f.input :url, :as => :string, :required => true, :label => "Site URL", :hint => "Root site URL. Don't add multiple URLs within the same domain." %>
+    <%= f.input :link_id, :as => :hidden %>
+    <%= f.input :url, :as => :string, :required => true, :label => "Site URL", :hint => "Root site URL. Don't add multiple URLs within the same domain.", :input_html => { :disabled => true } %>
     <%= f.input :title, :as => :string, :required => true, :label => "Site Title", :hint => "Short name for this site. Don't go SEO crazy on this one - it doesn't matter. ex: Yahoo, Twitter, Google." %>
     <%= f.input :description, :as => :text, :required => false, :label => "About this Site", :input_html => { :rows => 3 } %>
     <%= f.input :display_location, :as => :string, :required => false, :label => "Location text to show", :hint => "Usually just city state, like Orlando, FL." %>
