--- a/app/views/tools/_show.erb
+++ b/app/views/tools/_show.erb
@@ -1,5 +1,7 @@
-<% title "List of sites using #{@tool.name}" %>
+<% 
+  title "List of sites using #{@tool.name}"
 
+%>
 <section id="content" class="main tool">
   <%= render 'header' %>
   <%= render 'tools/nav' %>
