--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -8,6 +8,7 @@
       <ul class="options" style="display:none;">
         <li><a href="<%= tools_path(:sort => :sites_desc, :search => params[:search], :category => params[:category]) %>">Sort by popularity</a></li>
         <li><a href="<%= tools_path(:sort => :toolname_asc, :search => params[:search], :category => params[:category]) %>">Sort by tool</a></li>
+        <li><a href="<%= tools_path(:sort => :created_desc, :search => params[:search], :category => params[:category]) %>">Sort by date</a></li>
       </ul>
     </div>
   </div>
