--- a/app/views/tools/lookup_complete.js.erb
+++ b/app/views/tools/lookup_complete.js.erb
@@ -1,2 +1,3 @@
 $("#lookup_tool").hide();
+$("#existing_tool").hide();
 $("#edit_tool_form").html("<%= escape_javascript(render(:partial => 'form')) %>").show();
