--- a/app/views/sites/duplicate.js.erb
+++ b/app/views/sites/duplicate.js.erb
@@ -1,2 +1,2 @@
-$("#edit_site_form").empty();
+cancel_lookup();
 $("#existing_site ul").html("<%= escape_javascript(render(@site)) %>").parent().show();
