--- a/app/views/tools/duplicate.js.erb
+++ b/app/views/tools/duplicate.js.erb
@@ -1,2 +1,3 @@
+cancel_lookup();
 $("#edit_tool_form").empty();
 $("#existing_tool ul").html("<%= escape_javascript(render(@tool)) %>").parent().show();
