--- a/app/views/tools/lookup_complete.js.erb
+++ b/app/views/tools/lookup_complete.js.erb
@@ -1,3 +1,4 @@
+cancel_lookup();
 $("#lookup_tool").hide();
 $("#existing_tool").hide();
 $("#edit_tool_form").html("<%= escape_javascript(render(:partial => 'form')) %>").show();
